Додали розмiтку , cтилi до тексту

--- a/style.css
+++ b/style.css
@@ -29,8 +29,7 @@ color: #B4AD9E;
 .card-title {
     font-size: 30px;
     line-height: 40px;
-    font-weight: 400px;
-    
+    font-weight: 400;
 }
 
 .main-button {
