--- a/style.css
+++ b/style.css
@@ -6,10 +6,33 @@
     font-weight: 400;
     color: #626262; 
 }
- 
+ .wrapper{
+    width: 906px;
+    margin: 0 auto;
+ }
 /*Шапка сайту*/
+.header{
+    height: 182px;
+    padding-top: 71px;
+    
+}
+.header-nav {
+    margin: 0 auto;
+    width: 1000px;
+}
 .header-nav-list {
     list-style: none;
+}
+.header-nav-list > li{
+    display: inline-block;
+    border: 1px solid silver;
+}
+/* видалення зайвих відступів між елементами inlane-block*/
+.header-nav-list > li:not(:first-child) {
+    margin-left: -4px;
+}
+.header-nav-list > li:not(:last-child) {
+    margin-right: 100px;
 }
 .header-nav-list > li > a {
     color: #7d7d7d;
