--- a/style.css
+++ b/style.css
@@ -13,26 +13,24 @@
 /*Шапка сайту*/
 .header{
     height: 182px;
-    padding-top: 71px;
-    
+    padding-top: 71px;  
 }
 .header-nav {
     margin: 0 auto;
-    width: 1000px;
+    width: 555px;
 }
 .header-nav-list {
     list-style: none;
 }
 .header-nav-list > li{
     display: inline-block;
-    border: 1px solid silver;
 }
 /* видалення зайвих відступів між елементами inlane-block*/
 .header-nav-list > li:not(:first-child) {
     margin-left: -4px;
 }
 .header-nav-list > li:not(:last-child) {
-    margin-right: 100px;
+     margin-right: 70px; 
 }
 .header-nav-list > li > a {
     color: #7d7d7d;
@@ -41,7 +39,17 @@
 .header-nav-list > li > a:hover {
     color: #03a9f4;
 }
-
+/* Основна частина сайту*/
+.card {
+    display: inline-block;
+    width: 420px;
+}
+.card:not(:first-child){
+    margin-left: -4px;
+}
+.card:nth-child(odd) {
+    margin-right: 65px;
+  }
 .card-category {
 font-family: 'Ubuntu';
 font-weight: 300;
